--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "edbs",
   "version": "0.1.0",
   "description": "ENKA - Database Backup System",
-  "main": "script.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "erdemsezen",
   "license": "ISC",
   "dependencies": {
-    "mysql": "^2.18.1"
+    "mysql": "2.18.1",
+    "express": "4.19.2"
   }
 }
