--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "erdemsezen",
   "license": "ISC",
   "dependencies": {
-    "mysql2": "3.10.2",
-    "express": "4.19.2"
+    "express": "4.19.2",
+    "mysql2": "3.10.2"
   }
 }
+s
