--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "ENKA - Database Backup System",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon src/index.js"
   },
   "author": "erdemsezen",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "4.19.2",
-    "mysql2": "3.10.2"
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "3.10.2",
+    "nocache": "^4.0.0"
   }
 }
