--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "4.19.2",
+    "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "3.10.2",
     "nocache": "^4.0.0"
   }
